WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204534
Fix compile error in release mode
https://bugs.webkit.org/show_bug.cgi?id=204534
Summary
Fix compile error in release mode
Per Arne Vollan
Reported
2019-11-22 13:52:39 PST
A compiler error is thrown in release mode when compiling FullBytecodeLiveness::getLiveness, since not all paths are returning a value.
Attachments
Patch
(1.38 KB, patch)
2019-11-22 13:56 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2019-11-22 13:56:36 PST
Created
attachment 384191
[details]
Patch
Per Arne Vollan
Comment 2
2019-11-22 14:04:01 PST
Thanks for reviewing!
WebKit Commit Bot
Comment 3
2019-11-22 14:21:13 PST
Comment on
attachment 384191
[details]
Patch Clearing flags on attachment: 384191 Committed
r252801
: <
https://trac.webkit.org/changeset/252801
>
WebKit Commit Bot
Comment 4
2019-11-22 14:21:15 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-11-22 14:22:21 PST
<
rdar://problem/57440687
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug