Fix compile error in release mode https://bugs.webkit.org/show_bug.cgi?id=204534

Reviewed by Mark Lam.

A compiler error is thrown in release mode when compiling FullBytecodeLiveness::getLiveness,
since not all paths are returning a value.

* bytecode/FullBytecodeLiveness.h:
(JSC::FullBytecodeLiveness::getLiveness const):


Canonical link: https://commits.webkit.org/217778@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252801 268f45cc-cd09-0410-ab3c-d52691b4dbfc